--- a/SyncComponents.csproj
+++ b/SyncComponents.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Syncfusion.EJ2.AspNet.Core" Version="20.2.0.46" />
+  </ItemGroup>
+
 </Project>
